--- a/index.html
+++ b/index.html
@@ -6,21 +6,49 @@
     </head>
     <body>
         <header>
-            <div class="inline_block logo">
-                <img src="images/logo1.png">
-                <nav class="inline_block">
-                    <ul>
-                    <li>About</li>
-                    <li>Skills</li>
-                    <li>Work</li>
-                    <li>Contact</li>
+                <img class="logo" src="images/logo1.png">
+                <nav>
+                    <ul class="nav_links">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Projects</a></li>
                     </ul>
                 </nav>
-            </div>
+                    <a class="contact" href="#"><button>Contact Me</button></a>
         </header>
+
+        <section id="hero">
+            <div class="container">
+                <div class="info">
+                    <h1>Welcome to Paula Laziuk's portfolio!</h1>
+                    <h2>Nice to meet you, I am a UX/UI designer.</h2>
+                    <p>I am passionate about creating elegant and straight-forward user experiences.</p>
+                    <!--<a href="#">See My Work</a>-->
+                
+                </div>
+                <!--<div class="img" src="images/IMG_2015.png">
+                <img src="images/whitewood.webp">
+                </div>-->
+            </div>
+        </section>
+        <footer>
+            <div class="footer-container">
+                <div class="footer">
+                        <ul class="footer_links">
+                            <li><a href="#">Email: paulalaziuk@gmail.com</a></li>
+                            <li><a href="#">LinkedIn</a></li>
+                        </ul>
+                </div>
+            </div>
+            <!--<div class="footer_image">
+                <img src="images/logo2.png">
+            </div>-->
+        </footer>
+    </body>
+<!--
         <section class="heroImg">
             <div class="content">
-                <img src="images/IMG_2015.png">
+                <img class="resize" src="images/IMG_2015.png">
                 <p>Hello my name is Paula! I am a UX/UI designer who is passionate about creating functional and simple user experiences.</p>
                 <button>Download Resume</button>
             </div>
@@ -33,5 +61,5 @@
                 <li>Contact</li>
             </ul>
         </footer>
-    </body>
+-->
 </html>
