major homepage changes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
                 <img class="logo" src="images/logo1.png">
                 <nav>
                     <ul class="nav_links">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Skills</a></li>
                     <li><a href="#">Projects</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">About</a></li>
                     </ul>
                 </nav>
                     <a class="contact" href="#"><button>Contact Me</button></a>
@@ -23,26 +23,25 @@
                     <h1>Welcome to Paula Laziuk's portfolio!</h1>
                     <h2>Nice to meet you, I am a UX/UI designer.</h2>
                     <p>I am passionate about creating elegant and straight-forward user experiences.</p>
-                    <!--<a href="#">See My Work</a>-->
-                
+                    <h3><a href="#">See My Work -></a></h3>
                 </div>
-                <!--<div class="img" src="images/IMG_2015.png">
-                <img src="images/whitewood.webp">
-                </div>-->
+                <!--<img class="img" src="images/logo2.png">-->
+                <!--<img src="images/whitewood.webp">-->
             </div>
+            <!--<img class="img" src="images/logo2.png">-->
         </section>
         <footer>
             <div class="footer-container">
                 <div class="footer">
                         <ul class="footer_links">
-                            <li><a href="#">Email: paulalaziuk@gmail.com</a></li>
-                            <li><a href="#">LinkedIn</a></li>
+                            <li><a href="#"><img src="images/icons8-mail-100.png"></a></li>
+                            <li><a href="#"><img src="images/GitHub-Mark-64px.png"></a></li>
+                            <li><a href="#"><img src="images/LI-In-Bug.png"></a></li>
                         </ul>
                 </div>
+                <!--<img class="footer_img" src="images/logo2.png">-->
+                <p>Paula Laziuk 2022 ®</p>
             </div>
-            <!--<div class="footer_image">
-                <img src="images/logo2.png">
-            </div>-->
         </footer>
     </body>
 <!--
